--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@": "./dist"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
@@ -49,8 +50,11 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "mongoose": "^7.0.3",
     "node-fetch": "^2.6.9"
