--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
