--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@types/node-fetch": "^2.6.3",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint": "^8.0.1",
@@ -58,6 +59,7 @@
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "mongoose": "^7.0.3",
-    "node-fetch": "^2.6.9"
+    "node-fetch": "^2.6.9",
+    "swagger-ui-express": "^4.6.2"
   }
 }
